--- a/test1.html
+++ b/test1.html
@@ -1,3 +1,10 @@
 <html>
-
+    <head>
+        <title>My New WebSite</title>
+    </head>
+    <body>
+        <h1>Hello World</h1>
+        <h2>Hello World</h2>
+        <h3>Hello World</h3>
+    </body>
 </html>
